# MANGA-API

./: .gitignore  README.md  api.py  database.py  db_models.py  main.py  manga.db  manga_downloader.py  models.py  pyproject.toml  requirements.txt  scraper.py  tools.py
docs/: api.md
tests/: test_tools.py
