[project]
name = "mangaha-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.121.0",
    "img2pdf>=0.6.3",
    "pillow>=12.0.0",
    "pydantic>=2.12.4",
    "pytest>=9.0.0",
    "requests>=2.32.5",
    "selectolax>=0.4.0",
    "sqlalchemy>=2.0.44",
    "tqdm>=4.67.1",
    "uvicorn>=0.38.0",
]
